# SPIFlashProgrammer

./: .clang-tidy  .gitignore  .gitmodules  .lgtm.yml  Makefile  Makefile.inc  README.md  SPIFlash.c  Startup.c  TM4C.ld  USBInterface.h  meson.build
.github/: FUNDING.yml
board/: .gitignore  Connectors.sch  Onboard_Flash.sch  Power_Supply.kicad_sch  Power_Supply.sch  Processor.sch  SPIFlashProgrammer-cache.lib  SPIFlashProgrammer.kicad_pcb  SPIFlashProgrammer.pro  SPIFlashProgrammer.sch
board/bom/: SPIFlashProgrammer-rev2.html
board/gerber/: SPIFlashProgrammer.g3l  SPIFlashProgrammer.gbo  SPIFlashProgrammer.gbs  SPIFlashProgrammer.gko  SPIFlashProgrammer.gtc  SPIFlashProgrammer.gto  SPIFlashProgrammer.gvp  SPIFlashProgrammer.xln
common/include/: usbProtocol.hxx
cross-files/: arm-none-eabi-system.meson  arm-none-eabi.meson
firmware/: GPIO.h  Makefile  SPI.h  SPIFlash.c  TM4C123GH6PM.ld  UART.h  constants.hxx  flash.cxx  flash.hxx  indexedIterator.hxx  led.cxx  led.hxx  meson.build  osc.cxx  osc.hxx  platform.hxx  sfdp.cxx  sfdp.hxx  spi.cxx  spi.hxx  spiFlashProgrammer.cxx  startup.cxx  timer.cxx  timer.hxx  usb.cxx  usb.hxx
firmware/LPC4370/: GPIO.c  LPC4370.ld  SPI.c  Startup.c  UART.c  USB.c  USB.h  USBCDC.h  USBRequests.c  USBRequests.h  USBTypes.h
firmware/TivaC/: GPIO.c  SPI.c  UART.c
firmware/include/: LPC4370.h
firmware/tm4c123gh6pm/: constants.hxx  memoryLayout.ld  platform.hxx
firmware/usb/: core.hxx  descriptors.cxx  descriptors.hxx  device.cxx  device.hxx  flashProto.cxx  flashProto.hxx  types.hxx
flashprog/: .gitignore  Makefile  Makefile.inc  USB.c  USB.h  flashprog.c  rs232.c  rs232.h  strUtils.c  strUtils.h
hardware/: Connectors.kicad_sch  Onboard_Flash.kicad_sch  Processor.kicad_sch  SPIFlashProgrammer.kicad_pcb  SPIFlashProgrammer.kicad_pro  SPIFlashProgrammer.kicad_sch
hardware/gerber/: .gitignore  SPIFlashProgrammer.g2l  SPIFlashProgrammer.gbc  SPIFlashProgrammer.gbl  SPIFlashProgrammer.gtl  SPIFlashProgrammer.gts  SPIFlashProgrammer.gvp
hardware/gerber/KiCAD/: .gitignore
old/firmware/: Makefile  Makefile.inc
old/firmware/LPC4370/: SPI.c  Startup.c  UART.c  USBRequests.c  USBRequests.h  USBTypes.h
old/firmware/TivaC/: SPI.c  Startup.c  TM4C.ld
old/firmware/include/: GPIO.h  LPC4370.h  tm4c123gh6pm.h
old/flashprog/: USB.h  strUtils.h
software/: args.cxx  args.hxx  flashprog.cxx  meson.build  options.hxx  progress.cxx  sfdp.cxx  sfdp.hxx  sfdpInternal.hxx
software/args/: tokenizer.cxx  tokenizer.hxx  types.cxx
software/include/: help.hxx  meson.build  progress.hxx  usbContext.hxx  usbDevice.hxx  usbDeviceList.hxx  version.hxx.in
software/utils/: iterator.hxx  span.hxx  units.hxx
